--- a/_config.yml
+++ b/_config.yml
@@ -31,11 +31,11 @@ linkedin: 'username'
 # Navigation
 navigation:
   - text: About
-    url: /about/
+    url: /about
   - text: Style Guide
-    url: /style-guide/
+    url: /style-guide
   - text: Contact Me
-    url: /contact/
+    url: /contact
 
 # Required Plugins
 plugins_dir:
