--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site setings
 name: 'Stargirl.io'
-description: 'Bold Theme For Brave People'
+description: 'The search for something incredible'
 # Sidebar about text
 site_description: 'Welcome to my blog. It features topics such as fashion, architecture, travel & design. This blog is about finding balance in life, living with purpose, having fun, and doing what you love.'
 logo:
