--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,12 +1,12 @@
 daniel:
-  username: daniel
-  name: Daniel Bennett
-  url_full: https://justgoodthemes.com/
-  url: justgoodthemes.com
-  bio: Daniel is a designer, photographer, speaker, author of a couple of books about typography and the founder of photo magazine Curious.
+  username: priscilla
+  name: Priscilla
+  url_full: stargirl.io
+  url: stargirl.io
+  bio: Priscilla is a traveler, storyteller, quantum physics enthusiast, and futurist.
   picture: /assets/images/daniel.jpg
   facebook: justgoodthemes
-  twitter: justgoodthemes
+  twitter: priscilaparticl
 nancy:
   username: nancy
   name: Nancy Perez
