--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -4,7 +4,7 @@ daniel:
   url_full: stargirl.io
   url: stargirl.io
   bio: Priscilla is a traveler, storyteller, quantum physics enthusiast, and futurist.
-  picture: /assets/images/Copy profile.jpg
+  picture: /assets/images/personalpicture.JPEG
   facebook: justgoodthemes
   twitter: priscilaparticl
 nancy:
