--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,7 +3,7 @@ priscilla:
   name: Priscilla
   url_full: stargirl.io
   url: stargirl.io
-  bio: Priscilla is a traveler, storyteller, quantum physics enthusiast, and futurist. After working in marketing for ten years, she has recently returned to school to study Physics at City University of New York.
+  bio: Priscilla is a traveler, storyteller, quantum physics enthusiast, and futurist. After working in marketing for ten years, she has recently returned to school to study Physics at City University of New York. Read more <a href=http://www.stargirl.io/about.com>here</a> 
   picture: /assets/images/priscillastargirl.jpg
   facebook: justgoodthemes
   twitter: priscilaparticl
