--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,7 +5,7 @@ priscilla:
   url: stargirl.io
   bio: Priscilla is a traveler, storyteller, quantum physics enthusiast, and futurist. After working in marketing for ten years, she has recently returned to school to study Physics at City University of New York. Read more <a href=https://stargirl.io/about.com>here</a>. 
   picture: /assets/images/priscillastargirl.jpg
-  facebook: justgoodthemes
+  email: thepriscillaparticle@gmail.com
   twitter: priscilaparticl
 nancy:
   username: nancy
