--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ production_url: https://priscillastone.github.io/
 disqus: 'justgoodthemes'
 mailchimp_url: '//justgoodthemes.us3.list-manage.com/subscribe/post?u=78f1bab16028354caeb23aecd&amp;id=4a7330d117'
 # Add your GA Tracking Id
-ga_analytics: 
+ga_analytics: G-XWFW2G1SME
 
 # Contact form setings
 email: thepriscillaparticle@gmail.com
