--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,7 +3,7 @@ priscilla:
   name: Priscilla
   url_full: stargirl.io
   url: stargirl.io
-  bio: Priscilla is a traveler, storyteller, quantum physics enthusiast, and futurist. After working in marketing for ten years, she has recently returned to school to study Physics at City University of New York. Read more <a href=https://stargirl.io/about.com>here</a>. 
+  bio: Priscilla is a traveler, storyteller, quantum physics enthusiast, and futurist. After working in marketing for ten years, she has recently returned to school to study Physics at City University of New York. Read more <a href=https://stargirl.io/about>here</a>. 
   picture: /assets/images/priscillastargirl.jpg
   email: thepriscillaparticle@gmail.com
   twitter: priscilaparticl
