--- a/_config.yml
+++ b/_config.yml
@@ -44,8 +44,8 @@ ga_analytics: G-XWFW2G1SME
 
 # Contact form setings
 email: thepriscillaparticle@gmail.com
-contact_page_description: "Forma theme comes with a contact form built-in. You can use this form with Formspree service and get up to 50 submissions for free. Also, you can easily switch to another service if you want."
-thankyou_page_description: "Your message has been successfully sent. We will contact you very soon!"
+contact_page_description: "To get in touch with me use the form below or email me at thepriscillaparticle@gmail.com."
+thankyou_page_description: "Your message has been successfully sent. I will respond as soon as I can!"
 
 # Social links
 twitter: 'username'
