--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ favicon: 'assets/images/favicon.ico'
 baseurl: ''
 production_url: https://stargirl.io/
 disqus: 'justgoodthemes'
-mailchimp_url: 'mailchimp_url:'//justgoodthemes.us3.list-manage.com/subscribe/post?u=78f1bab16028354caeb23aecd&amp;id=4a7330d117'
+mailchimp_url: '//justgoodthemes.us3.list-manage.com/subscribe/post?u=78f1bab16028354caeb23aecd&amp;id=4a7330d117'
 # Add your GA Tracking Id
 ga_analytics: G-XWFW2G1SME
 
