Added mailchimp URL

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ favicon: 'assets/images/favicon.ico'
 baseurl: ''
 production_url: https://stargirl.io/
 disqus: 'justgoodthemes'
-mailchimp_url: '//justgoodthemes.us3.list-manage.com/subscribe/post?u=78f1bab16028354caeb23aecd&amp;id=4a7330d117'
+mailchimp_url: 'https://stargirl.us21.list-manage.com/subscribe/post?u=d2b0a03f0b552737b027907f4&id=2f941a0c95&f_id=00e5dce6f0'
 # Add your GA Tracking Id
 ga_analytics: G-XWFW2G1SME
 
